[tool.poetry]
name = "blaise-data-delivery-status"
version = "0.1.0"
description = ""
authors = ["Blaise 5 Team"]
packages = [
  { include = "blaise_dds", from = "client"}
]

[tool.poetry.dependencies]
python = "~3.9"
google-cloud-datastore = "^2.19.0"
Flask = "^2.1.1"
redis = "^3.5.3"
pytz = "^2021.1"
google-auth = "^1.28.1"
requests = "^2.25.1"
pytest-cov = "2.12.0"

[tool.poetry.dev-dependencies]
behave = "^1.2.6"
flake8 = "^3.9.0"
black = "^22.3"
isort = "^5.7.0"
fakeredis = "^1.4.5"
freezegun = "^1.1.0"
coverage = "^5.5"
pytest-cov = "^2.12.0"
flake8-cognitive-complexity = "^0.1.0"
pytest = "^6.2.3"
responses = "^0.13.2"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "88"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
