[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
google-cloud-datastore = "^2.21.0"
Flask = "^3.1.2"
pytz = "^2025.2"
google-auth = "^2.40.3"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
behave = "^1.3.1"
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
freezegun = "^1.5.5"
coverage = "^7.10.5"
pytest-cov = "^6.2.1"
flake8-cognitive-complexity = "^0.1.0"
pytest = "^8.4.1"
responses = "^0.25.8"

[tool.isort]
multi_line_output = "3"
include_trailing_comma = "True"
line_length = "120"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
